<resources>
    <string name="default_server">""</string>
    <string name="default_login">""</string>
    <string name="default_pass">""</string>
    <string name="default_device_id">""</string>
    <string name="app_name">Vortex FSM</string>
    <string name="data_consulting">DataConsulting Software Solutions ©</string>
    <string name="vortex_mobile">Vortex Mobile</string>
    <string name="logo">logo</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="_00">00</string>
    <string name="n_a">n/a</string>
    <string name="check_in">Check In</string>
    <string name="check_out">Check Out</string>
    <string name="email">Email</string>
    <string name="required">Required</string>
    <string name="under_construction">Under construction.</string>
    <string name="select">Select</string>
    <string name="company_website">"http://www.vortexsuite.com/en/"</string>
    <string name="company_website_gr">http://www.vortexsuite.com</string>
    <string name="company_website_ar">http://www.vortexsuite.com</string>
    <string name="host_server_url">Host Server URL</string>
    <string name="host_server_url_gr">Διακομιστής Βάσης</string>
    <string name="host_server_url_ar">الخادم المضيف</string>
    <string name="language">Language</string>
    <string name="language_gr">Γλώσσα</string>
    <string name="language_ar">لغة</string>
    <string name="english">English</string>
    <string name="english_gr">Αγγλικά</string>
    <string name="english_ar">انجليزي</string>
    <string name="greek">Greek</string>
    <string name="greek_gr">Ελληνικά</string>
    <string name="greek_ar">يوناني</string>
    <string name="arabic">Arabic</string>
    <string name="arabic_gr">Αραβικά</string>
    <string name="login">Login</string>
    <string name="login_gr">Σύνδεση Χειριστή</string>
    <string name="login_ar">الدخول</string>
    <string name="password">Password</string>
    <string name="password_gr">Κωδικός Πρόσβασης</string>
    <string name="password_ar">كلمة المرور</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_gr">Σύνδεση</string>
    <string name="sign_in_ar">تسجيل الدخول</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_google_gr">Σύνδεση με Google</string>
    <string name="sign_in_with_google_ar">Sign in with Google</string>
    <string name="click_to_sign">click to sign</string>
    <string name="click_to_sign_gr">πατήστε για υπογραφή</string>
    <string name="click_to_sign_ar">اضغط لتسجيل الدخول</string>
    <string name="log_out">Log Out</string>
    <string name="log_out_gr">Αποσύνδεση</string>
    <string name="log_out_ar">تسجيل الخروج</string>
    <string name="please_sign_below">Please sign below …</string>
    <string name="please_sign_below_gr">Παρακαλώ υπογράψτε\nπαρακάτω…</string>
    <string name="please_sign_below_ar">الرجاء تسجيل الدخول أدناه</string>
    <string name="login_failed">Login Failed…\n\nPlease check username and password and try again.</string>
    <string name="login_failed_gr">Η σύνδεση απέτυχε…\n\nΠαρακαλώ ελέγξτε το όνομα χρήστη και τον κωδικό πρόσβασης και ξαναπροσπαθείστε.</string>
    <string name="login_failed_ar">فشل تسجيل الدخول.</string>
    <string name="assignments">Assignments</string>
    <string name="assignments_gr">Αναθέσεις</string>
    <string name="assignments_ar">مهمات</string>
    <string name="assignment_details">Assignment Details</string>
    <string name="assignment_details_gr">Λεπτομέρειες Ανάθεσης</string>
    <string name="assignment_details_ar">تفاصيل المهمة</string>
    <string name="assignment_actions">Assignment Actions</string>
    <string name="assignment_actions_gr">Ενέργειες Ανάθεσης</string>
    <string name="assignment_actions_ar">اجراءات المهمة</string>
    <string name="show_assignments">Show Assignments</string>
    <string name="show_assignments_gr">Προβολή Αναθέσεων</string>
    <string name="show_assignments_ar">اظهار المهمات</string>
    <string name="assignment_id">Assignment ID</string>
    <string name="assignment_id_gr">ID Ανάθεσης</string>
    <string name="assignment_id_ar">تعريف المهمة</string>
    <string name="assignment_type">"Assignment Type: "</string>
    <string name="assignment_type_gr">"Τύπος Ανάθεσης: "</string>
    <string name="assignment_type_ar">"نوع المهمة: "</string>
    <string name="change_status">Please change the assignment status.</string>
    <string name="change_status_gr">Παρακαλώ αλλάξτε την κατάσταση της ανάθεσης.</string>
    <string name="change_status_ar">تغيير الحالة.</string>
    <string name="loading_data">Loading data…</string>
    <string name="loading_data_gr">Φόρτωση δεδομένων…</string>
    <string name="loading_data_ar">تحميل البيانات…</string>
    <string name="products">Products</string>
    <string name="products_gr">Προϊόντα</string>
    <string name="products_ar">المنتجات</string>
    <string name="installation_date">Installation date:</string>
    <string name="installation_date_gr">Ημερομηνία εγκατάστασης:</string>
    <string name="installation_date_ar">تنزيل البيانات:</string>
    <string name="send_new_product_data">Send new product data</string>
    <string name="send_new_product_data_gr">Αποστολή δεδομένων</string>
    <string name="send_new_product_data_gr_caps">ΑΠΟΣΤΟΛΗ ΔΕΔΟΜΕΝΩΝ</string>
    <string name="send_new_product_data_ar_caps">ارسال بيانات المنتج الجديد</string>
    <string name="add_new_product">Add new product</string>
    <string name="add_new_product_gr">Προσθήκη νέου προϊόντος</string>
    <string name="add_new_product_gr_caps">ΠΡΟΣΘΗΚΗ ΝΕΟΥ ΠΡΟΪΟΝΤΟΣ</string>
    <string name="add_new_product_ar_caps">اضافة منتج جديد</string>
    <string name="please_select_product">Please select product.</string>
    <string name="please_select_product_gr">Παρακαλώ επιλέξτε προϊόν.</string>
    <string name="please_select_product_ar">الرجاء اختيار المنتج.</string>
    <string name="product_deleted">Success…\n\nProduct successfully deleted.</string>
    <string name="product_deleted_gr">Ολοκλήρωση…\n\nΤο προϊόν διεγράφη επιτυχώς.</string>
    <string name="product_deleted_ar">تم حذف المنتج.</string>
    <string name="no_product">There is no product.</string>
    <string name="no_product_gr">Δεν βρέθηκε προϊόν.</string>
    <string name="no_product_ar">لايوجد منتج.</string>
    <string name="to_delete_product">Delete…\n\nAre you sure you want to delete the product ?</string>
    <string name="to_delete_product_gr">Διαγραφή\n\nΕίστε σίγουρος οτι θέλετε να διαγράψετε το προϊόν?</string>
    <string name="to_delete_product_ar">هل انت متأكد من حذف المنتج?</string>
    <string name="attributes">Attributes</string>
    <string name="attributes_gr">Χαρακτηριστικά</string>
    <string name="attributes_ar">الصفات</string>
    <string name="add_new_attributes_caps">ADD NEW ATTRIBUTES</string>
    <string name="add_new_attributes_caps_gr">ΠΡΟΣΘΗΚΗ ΝΕΩΝ ΧΑΡΑΚΤΗΡΙΣΤΙΚΩΝ</string>
    <string name="add_new_attributes_caps_ar">إضافة صفات جديدة</string>
    <string name="attribute_value">attribute value</string>
    <string name="attribute_value_gr">τιμή χαρακτηριστικού</string>
    <string name="attribute_value_ar">قيمة الصفات</string>
    <string name="save_new_attribute">Save new attribute</string>
    <string name="save_new_attribute_gr">Αποθήκευση νέου χαρακτηριστικού</string>
    <string name="save_new_attribute_gr_caps">ΑΠΟΘΗΚΕΥΣΗ ΧΑΡΑΚΤΗΡΙΣΤΙΚΩΝ</string>
    <string name="save_new_attribute_ar_caps">حفظ الصفات الجديدة</string>
    <string name="send_new_attributes_data">Send new attributes data</string>
    <string name="send_new_attributes_data_gr">Αποστολή δεδομένων</string>
    <string name="send_new_attributes_data_gr_caps">ΑΠΟΣΤΟΛΗ ΔΕΔΟΜΕΝΩΝ</string>
    <string name="send_new_attributes_data_ar_caps">إرسال بيانات الصفات الجديدة</string>
    <string name="attribute_saved">New attribute is successfully saved.</string>
    <string name="attribute_saved_gr">Επιτυχημένη αποθήκευση νέου χαρακτηριστικού.</string>
    <string name="attribute_saved_ar">تم حفظ الصفات الجديدة بنجاح.</string>
    <string name="type_attribute_value">Please type attribute value.</string>
    <string name="type_attribute_value_gr">Παρακαλώ συμπληρώστε την τιμή χαρακτηριστικού.</string>
    <string name="type_attribute_value_ar">الرجاء إدخال قيمة الصفة.</string>
    <string name="select_attribute_name">Please select attribute name.</string>
    <string name="select_attribute_name_gr">Παρακαλώ επιλέξτε το όνομα χαρακτηριστικού.</string>
    <string name="select_attribute_name_ar">الرجاء اختيار اسم الصفة.</string>
    <string name="error_new_attribute">Something went wrong while adding new attribute.\n\nPlease try again.</string>
    <string name="error_new_attribute_gr">Αποτυχία προσθήκης νέου χαρακτηριστικού.\n\nΠαρακαλώ προσπαθήστε ξανά.</string>
    <string name="error_new_attribute_ar">حدث خطأ ما خلال اضافة صفة جديدة				.</string>
    <string name="select_set_save_attribute">Please select attribute, set value and save.</string>
    <string name="select_set_save_attribute_gr">Παρακαλώ επιλέξτε χαρακτηριστικό, δηλώστε τιμή και αποθηκεύστε.</string>
    <string name="select_set_save_attribute_ar">الرجاء اختيار الصفة, اختيار القيمة والحفظ.</string>
    <string name="attribute_deleted">Success…\n\nAttribute successfully deleted.</string>
    <string name="attribute_deleted_gr">Ολοκλήρωση…\n\nΕπιτυχημένη διαγραφή χαρακτηριστικού.</string>
    <string name="attribute_deleted_ar">تم حذف الصفة بنجاح.</string>
    <string name="no_attribute">There is no attribute.</string>
    <string name="no_attribute_gr">Δεν βρέθηκε χαρακτηριστικό.</string>
    <string name="no_attribute_ar">لا يوجد صفة.</string>
    <string name="clear_cache_warning">Are you sure you want to clear application cache memory and data ?</string>
    <string name="clear_cache_warning_gr">Είστε σίγουροί ότι θέλετε να διαγράψετε τη μνήμη cache και τα δεδομένα της εφαρμογής;</string>
    <string name="clear_cache_warning_ar">هل أنت متأكد من مسح ذاكرة التخزين المؤقت للتطبيق والبيانات;</string>
    <string name="to_delete_attribute">Delete…\n\nAre you sure you want to delete the attribute ?</string>
    <string name="show_map">Show Map</string>
    <string name="synchronize">Synchronize</string>
    <string name="search">Search</string>
    <string name="send_email">Send Email</string>
    <string name="new_customer">New Customer</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="manuals">Manuals</string>
    <string name="history">History</string>
    <string name="project_description">Site Description</string>
    <string name="photo_settings">Attachments Settings</string>
    <string name="photo_image_size">Photo Image Size</string>
    <string name="image_sending_network_type">File Sending Network Type</string>
    <string name="notes">Notes</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="actual">Actual</string>
    <string name="wifi_and_mobile">WiFi and Mobile</string>
    <string name="only_wifi">Only WiFi</string>
    <string name="host_server_settings">Host Server Settings</string>
    <string name="search_customers">Search Customers</string>
    <string name="name">Name</string>
    <string name="calendar">Calendar</string>
    <string name="new_assignment">New Assignment</string>
    <string name="custom_fields">Custom Fields</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="scan_code">Scan Code</string>
    <string name="export_shared_prefs">Export Shared Preferences</string>
    <string name="installation">Installation</string>
    <string name="installation_zones">Installation Zones</string>
    <string name="installation_type">Installation Type</string>
    <string name="company_custom_fields">Company Custom Fields</string>
</resources>