<!-- Copyright (c) 2016. Developed by GTest Development -->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="dc.gtest.vortex.activities.LoginActivity">

    <item
        android:id="@+id/item_host_server"
        android:icon="@drawable/ic_language_white_24dp"
        android:orderInCategory="10"
        android:title="@string/host_server_url"
        app:showAsAction="always" />

    <item
        android:id="@+id/languageMenu"
        android:title="@string/language"
        app:showAsAction="always"
        android:orderInCategory="20"
        android:icon="@drawable/gb">
        <menu>
            <item
                android:id="@+id/action_lang_en"
                android:icon="@drawable/gb"
                android:orderInCategory="1"
                android:title="@string/english"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/action_lang_gr"
                android:icon="@drawable/gr"
                android:orderInCategory="2"
                android:title="@string/greek"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/action_lang_ar"
                android:icon="@drawable/ar"
                android:orderInCategory="3"
                android:title="@string/arabic"
                app:showAsAction="ifRoom" />
        </menu>
    </item>
</menu>
