<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="am.gtest.vortex.activities.AssignmentsActivity">

    <item
        android:id="@+id/action_search"
        android:orderInCategory="90"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/itemScanner"
        android:title="Scan Code"
        android:icon="@drawable/ic_blur_linear_black_24dp"
        android:orderInCategory="100"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/itemSwitchView"
        android:title="@string/calendar"
        android:icon="@drawable/ic_date_range_black_24dp"
        android:orderInCategory="100"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/itemSynchronize"
        android:title="@string/synchronize"
        android:icon="@android:drawable/stat_notify_sync"
        android:orderInCategory="100"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

</menu>
